kuber/debug.yml
apiVersion: v1
kind: Pod
metadata:
  name: debug
spec:
  containers:
  - name: demo
    image: centos
    command: ["sleep", "30" ]
