kuber/initcontainer.yml

apiVersion: v1
kind: Pod
metadata:
  name: pvc-demo
spec:
  volumes:
    - name: initdemo
      persistentVolumeClaim:
        claimName: initdemo
  containers:
    - name: demo
      image: centos
      command: ["sleep", "30000"]
      volumeMounts:
        - mountPath: "/opt/data"
          name: initdemo
