kuber/new2ingress.yml
apiVersion: apps/v1
kind: Deployment
    metadata:
      name: react-deployment
    spec:
      replicas: 3
      selector:
        matchLabels:
          component: web
      template:
        metadata:
          labels:
            component: web
        spec:
          containers:
            - name: react
              image: simonjames/react-node-docker-kubernetes-app-react
              ports:
                - containerPort: 3000
