kuber/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: debug
  label:
    app: httpd
spec:
  containers:
  - name: demo
    image: centos
    command: ["sleep", "30" ]
    resources:
      limits:
        memory: "128Mi"
        cpu: "100m"
      requests:
        memory: "64Mi"
        cpu: "100m"
