kuber/podenv.yml
apiVersion: v1
kind: Pod
metadata:
  name: httpd-env
  labels:
    name: env
spec:
  containers:
  - name: httpd
    image: httpd
    resources:
      limits:
        memory: "64Mi"
        cpu: "50m"
    ports:
      - containerPort: 80
