kuber/volume.yml

apiVersion: v1
kind: Pod
metadata:
  name: pvc-demo
spec:
  volumes:
    - name: mariadb-pvc
      persistentVolumeClaim:
        claimName: mariadb-pvc
  containers:
    - name: demo
      image: centos
      command: ["sleep" ,"30000"]
      volumeMounts:
        - mountPath: "opt/data"
          name: mariadb-pvc
