kuber/anand.yml
apiVersion: v1
kind: Pod
metadata:
  name: vprofile-v1
  labels:
    app: vprofile-v1
spec:
  containers:
  - name: demo
    image: anandsatish/nihal2
    resources:
      limits:
        memory: "128Mi"
        cpu: "100m"
      requests:
        memory: "64Mi"
        cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: example-service
spec:
  selector:
    app: vprofile-v1
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
