kuber/app1 deploye.yml
apiVersion: v1
kind: Pod
metadata:
  name: httpd
  labels:
    app: app1
spec:
  containers:
  - name: demo
    image: anandsatish/httpdapp1
    resources:
      limits:
        memory: "128Mi"
        cpu: "100m"
      requests:
        memory: "64Mi"
        cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
spec:
  selector:
    app: app1
  ports:
    - port: 80
      targetPort: 80
