kuber/externelname.yml
apiVersion: v1
kind: Service
metadata:
  name: example-service
spec:
  selector: 
  type: ExternalName
  ExternalName: google.com
