kuber/svc load balencer.yml
apiVersion: v1
kind: Pod
metadata:
  name: httpd
  labels:
    app: httpd
spec:
  containers:
  - name: demo
    image: httpd
    resources:
      limits:
        memory: "128Mi"
        cpu: "100m"
      requests:
        memory: "64Mi"
        cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: anand-service
spec:
  type: loadBalencer
  selector:
    app: httpd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
