kuber/project.yml
apiVersion: v1
kind: Pod
metadata:
  name: gameoflife
  labels:
    app: gameoflife
spec:
  containers:
  - name: demo
    image: anandsatish/nihal
    
    resources:
      limits:
        memory: "128Mi"
        cpu: "100m"
      requests:
        memory: "64Mi"
        cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: gameoflife-svc
spec:
  selector:
    app: gameoflife
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: vprofile-v1
  labels:
    app: vprofile-v1
spec:
  containers:
  - name: demo
    image: anandsatish/nihal2
    resources:
      limits:
        memory: "128Mi"
        cpu: "100m"
      requests:
        memory: "64Mi"
        cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: vprofile-v1-svc
spec:
  selector:
    app: vprofile-v1
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pods 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /gameoflife
        pathType: Prefix
        backend:
          serviceName: gameoflife-svc
          servicePort: 8080
      - path: /vprofile-v1
        pathType: Prefix
        backend:
          serviceName: vprofile-v1-svc
          servicePort: 8080
